# meetup-maker

./: package-lock.json  package.json
.github/workflows/: python-app.yml
app/: layout.tsx
app/pages/: Code.tsx  Login.tsx
back/: pyproject.toml
back/meetup_maker/: api.py  configuration.py  database.py  server.py
front/: package-lock.json  package.json  state.tsx
front/app/: api.tsx  layout.tsx  page.tsx
front/app/pages/: dashboard.tsx  login.tsx
